tests/NormalTests/paczka1/fuzzy1/87319885.err
Error in line 1: qGrMh A766 31,0
Error in line 7: OHY1uLbBR A188 66,8
Error in line 14: OHY1uLbBR S987 93,8
Error in line 12: A766 A188 80,2
Error in line 15: OHY1uLbBR A766 28,0
Error in line 18: OHY1uLbBR S700 31,9
Error in line 25: cbrH5 A188 15,1
Error in line 11: Sfdou A766 15,1
Error in line 29: CQ3KC A188 70,9
